[gd_scene load_steps=3 format=3 uid="uid://hyg8ld5o2lnf"]

[ext_resource type="Script" path="res://user-interface/game-over/game_over.gd" id="1_ig10v"]
[ext_resource type="FontFile" uid="uid://ds6n614auqiiw" path="res://user-interface/fonts/font_1.ttf" id="2_sdhmc"]

[node name="GameOver" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig10v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.141176, 0.266667, 1)

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -22.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_sdhmc")
text = "GAME OVER!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 25.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_sdhmc")
theme_override_font_sizes/font_size = 10
text = "score 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 44.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_sdhmc")
theme_override_font_sizes/font_size = 10
text = "highscore 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverDelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="GameOverDelayTimer" to="." method="_on_game_over_delay_timeout"]
